<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:layout_marginTop="27dp"
            android:src="@drawable/movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="66dp"
            android:layout_marginTop="217dp"
            android:src="@drawable/frame_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/border"
            android:hint="@string/name"
            android:paddingLeft="16dp"
            android:maxLength="45"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:singleLine="true"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/surnameEditText"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/border"
            android:hint="@string/surname"
            android:maxLength="45"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/border"
            android:hint="@string/email"
            android:maxLength="45"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surnameEditText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:password="true"
            android:maxLength="45"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/re_passwordEditText"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/border"
            android:hint="@string/re_password"
            android:password="true"
            android:maxLength="45"
            android:paddingLeft="16dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/button_border_blue"
            android:hint="@string/register"
            android:textColorHint="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/re_passwordEditText"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/iHaveAccountButton"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/border"
            android:hint="@string/i_have_account"
            android:textColorHint="@color/blue_buttons"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerButton"
            tools:ignore="MissingConstraints" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@+id/iHaveAccountButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>